--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ img {
     margin-bottom: 3rem;
 }
 
-/* Header */
+/* header */
 .header {
     position: fixed;
     top: 0;
@@ -143,6 +143,8 @@ img {
     color: var(--first-color);
 }
 
+
+/* home sect */
 .home {
     background-color: var(--container-color);
     padding-block: 9rem 3rem;
@@ -261,6 +263,8 @@ img {
     color: var(--white);
 }
 
+
+/* about sect */
 .about_container {
     grid-template-columns: 4fr 8fr;
     align-items: center;
@@ -356,4 +360,79 @@ img {
 
 .about_social-link:hover {
     color: var(--first-color);
+}
+
+/* experience sect */
+.experience {
+    background-color: var(--container-color);
+}
+
+.resume_container {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.resume_heading {
+    text-align: center;
+    font-size: var(--h3-font-size);
+    padding-bottom: 2rem;
+}
+
+.resume_heading, .resume_item {
+    border-bottom: 2px solid var(--border-color);
+}
+
+.resume_item:not(:first-child) {
+    border-right: 2px solid var(--border-color);
+}
+
+.resume_item {
+    position: relative;
+}
+
+.resume_header {
+    padding: 2rem 1.5rem;
+}
+
+.resume_subtitle {
+    font-size: var(--larger-font-size);
+    cursor: pointer;
+}
+
+.resume_icon {
+    background-color: var(--container-color);
+    border: 2px solid var(--border-color);
+    font-size: var(--h2-font-size);
+    height: 48px;
+    width: 48px;
+    border-radius: 50%;
+    position: absolute;
+    right: -1.5rem;
+    bottom: -1.5rem;
+    z-index: 10;
+    line-height: 1.1em;
+    text-align: center;
+    cursor: pointer;
+}
+
+.resume_content {
+    padding-inline: 1.5rem 3rem;
+}
+
+.resume_date-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.resume_title {
+    font-size: var(--h3-font-size);
+}
+
+.resume_date {
+    color: var(--title-color);
+    font-size: var(--large-font-size);
+}
+
+.resume_desc {
+    margin-block: 1.25rem 2rem;
 }
