--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,3 +436,40 @@ img {
 .resume_desc {
     margin-block: 1.25rem 2rem;
 }
+
+.services_container {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.services_item {
+    background-color: var(--container-color);
+    border: 1px solid var(--container-color);
+    padding: 2.5rem 1.8rem;
+    position: relative;
+    border-radius: .5rem;
+    transition: all .5s ease;
+}
+
+.services_item:hover {
+    background-color: var(--body-color);
+    border-color: var(--border-color);
+}
+
+.services_icon {
+    color: var(--first-color);
+    font-size: 1.8rem;
+}
+
+.services_title {
+    font-size: var(--h3-font-size);
+    margin-block: 1.5rem 1rem;
+}
+
+.services_no {
+    position: absolute;
+    right: 2.5rem;
+    top: 1rem;
+    color: var(--title-color);
+    font-size: 3.75rem;
+    opacity: 0.07;
+}
